// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonNativeSelect renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
            readonly=""
            size="1"
            type="text"
            value="text1"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NonNativeSelect renders custom options 1`] = `
<ul
  class="MuiList-root PicassoMenu-root PicassoScrollMenu-menu PicassoSelectOptions-menu"
  role="listbox"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="PicassoScrollMenu-scrollView"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
        data-highlighted="true"
        role="option"
        tabindex="-1"
        value="val1"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <div
                data-testid="custom-option-1"
              >
                text1
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val2"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <div
                data-testid="custom-option-2"
              >
                text2
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val3"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <div
                data-testid="custom-option-3"
              >
                text3
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`NonNativeSelect renders description 1`] = `
<ul
  class="MuiList-root PicassoMenu-root PicassoScrollMenu-menu PicassoSelectOptions-menu"
  role="listbox"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="PicassoScrollMenu-scrollView"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
        data-highlighted="true"
        role="option"
        tabindex="-1"
        value="val1"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <span
                class="PicassoMenuItem-stringContent"
              >
                text1
              </span>
            </div>
            <div
              class="PicassoMenuItem-description"
              style="margin-top: 0.25rem; margin-left: 1.5rem;"
            >
              description1
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val2"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <span
                class="PicassoMenuItem-stringContent"
              >
                text2
              </span>
            </div>
            <div
              class="PicassoMenuItem-description"
              style="margin-top: 0.25rem; margin-left: 1.5rem;"
            >
              description2
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val3"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                style="margin-right: 0.5rem;"
              />
              <span
                class="PicassoMenuItem-stringContent"
              >
                text3
              </span>
            </div>
            <div
              class="PicassoMenuItem-description"
              style="margin-top: 0.25rem; margin-left: 1.5rem;"
            >
              description3
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;
